# bash_obf

./: .gitattributes  .gitignore  LICENSE  README.md  SESSION.md  bootstrap.py  pyproject.toml
.github/workflows/: ci.yml
ci/: __init__.py  equivalence_check.py
obfush/: __init__.py  cli.py
obfush/engine/: __init__.py  ast_emitter.py  ast_parser.py  comment_strip.py  core.py  entropy_evaluator.py  layer_selector.py  normalize.py  normalizer.py  seed.py  verifier.py
obfush/layers/: __init__.py  base.py  cmd_sub.py  encode.py  entropy_mask.py  flow_obfusc.py  id_mangle.py  indirection.py  junk_inject.py  poly_shell.py  str_shred.py
obfush/utils/: __init__.py  bash_keywords.py  compat_matrix.py  decoy_corpus.py  entropy_utils.py  string_utils.py
tests/: test_ast_parser.py  test_corpus_and_normalizer.py  test_emitter.py  test_equivalence.py  test_normalizer.py
tests/entropy_corpus/: backup.sh  health_check.sh  log_rotate.sh
tests/fixtures/: basic.sh  comprehensive.sh  demo_test.sh  fix_validation.sh  fix_verification_test.sh  full_syntax.sh  functions.sh  opaque_blob_recovery.sh  operational.sh  pipelines.sh  real_payload_smoke.sh  redteam_full.sh  stress_indirection.sh  ultimate_stress_test.sh
tests/test_layers/: __init__.py  test_all_layers.py
